# maestro-keypress

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Maestro.spec  README.md  build.bat  pyproject.toml
.github/workflows/: ci.yml
docs/: blog-post.md
docs/plans/: 2026-01-28-heartopia-music-player-design.md  2026-01-28-maestro-implementation.md  2026-01-28-wwm-support-design.md  2026-01-29-enhancements-design.md  2026-01-29-enhancements-implementation.md  2026-01-30-settings-and-fixes-design.md  2026-02-11-test-refactoring-design.md  2026-02-12-xylophone-layout-design.md  2026-03-02-gui-redesign-design.md
scripts/: README.md  download_ffmpeg.py  trim_midi_silence.py
songs/: Unravel - Tokyo Ghoul.mid
src/maestro/: __init__.py  config.py  game_mode.py  gui.py  key_layout.py  keymap.py  keymap_15_double.py  keymap_15_triple.py  keymap_drums.py  keymap_once_human.py  keymap_wwm.py  keymap_xylophone.py  logger.py  main.py  midi_trim.py  parser.py  player.py  update_checker.py
src/maestro/gui/: __init__.py  about_dialog.py  constants.py  controls_panel.py  exit_dialog.py  icon_rail.py  import_panel.py  leading_silence_dialog.py  main_window.py  piano_roll.py  progress_panel.py  settings_dialog.py  signals.py  song_list.py  splash.py  theme.py  toggle_switch.py  update_banner.py  utils.py  workers.py
src/maestro/gui/pages/: __init__.py  dashboard.py  info_page.py  log_page.py  settings_page.py
src/maestro/importers/: __init__.py  midi_cleanup.py  online_sequencer.py  synthesia.py  youtube.py
tests/: conftest.py  test_build.py  test_config.py  test_dashboard.py  test_exit_dialog.py  test_gui.py  test_icon_rail.py  test_importers.py  test_info_page.py  test_integration.py  test_key_layout.py  test_keymap.py  test_keymap_15_double.py  test_keymap_15_triple.py  test_keymap_drums.py  test_keymap_once_human.py  test_keymap_wwm.py  test_keymap_xylophone.py  test_leading_silence_flow.py  test_log_page.py  test_logger.py  test_main.py  test_main_window_panel.py  test_midi_cleanup.py  test_parser.py  test_player.py  test_progress_panel.py  test_settings_page.py  test_toggle_switch.py  test_update_checker.py
