[project]
name = "maestro"
version = "1.4.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "nayfusaurus", email = "35911760+nayfusaurus@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "mido==1.3.3",
    "pydirectinput==1.0.4",
    "pynput==1.8.1",
    "PySide6>=6.6.0,<7.0.0",
    "requests>=2.32.5",
    "yt-dlp>=2024.12.0",
    "basic-pitch>=0.4.0",
    "numpy<2",
    "opencv-python-headless>=4.9.0",
    "onnxruntime>=1.17.0",
]

[project.scripts]
maestro = "maestro:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
# tensorflow-io-gcs-filesystem (transitive dep of tensorflow, which is a
# transitive dep of basic-pitch) has no Windows wheels. We use ONNX Runtime
# for inference, not TensorFlow, so this package is not needed at runtime.
override-dependencies = [
    "tensorflow-io-gcs-filesystem>=0.23.1; sys_platform != 'win32'",
    # basic-pitch pins resampy<0.4.3, but 0.4.3 drops the pkg_resources
    # dependency (uses importlib.resources instead). Without this override,
    # setuptools must be installed just for pkg_resources.
    "resampy>=0.4.3",
]

[dependency-groups]
dev = [
    "bandit==1.9.3",
    "mypy==1.19.1",
    "pillow>=12.1.1",
    "pip-audit>=2.10.0",
    "pyinstaller==6.18.0",
    "pytest==9.0.2",
    "pytest-qt>=4.4.0",
    "ruff==0.15.0",
    "types-requests>=2.32.4.20260107",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort (import sorting)
    "N",   # pep8-naming
    "UP",  # pyupgrade (modern Python idioms)
    "B",   # flake8-bugbear (common bugs)
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # Allow assert in tests
"src/maestro/gui/*" = ["N802"]  # Allow Qt method overrides (paintEvent, closeEvent, etc.)

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradually enforce, don't block on existing code
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true

# Third-party library handling
ignore_missing_imports = true  # Libraries like mido, pynput may lack stubs

# Specific module configurations if needed
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false  # Allow looser typing in tests
