[project]
name = "maestro"
version = "2.0.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "nayfusaurus", email = "35911760+nayfusaurus@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "mido==1.3.3",
    "pydirectinput==1.0.4",
    "pynput==1.8.1",
    "PySide6>=6.6.0,<7.0.0",
    "requests>=2.33.0",
]

[project.scripts]
maestro = "maestro:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "bandit==1.9.4",
    "mypy==1.19.1",
    "pillow>=12.1.1",
    "pip-audit>=2.10.0",
    "pyinstaller==6.19.0",
    "pytest==9.0.2",
    "pytest-qt>=4.4.0",
    "ruff==0.15.4",
    "ty>=0.0.21",
    "types-requests>=2.32.4.20260107",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort (import sorting)
    "N",   # pep8-naming
    "UP",  # pyupgrade (modern Python idioms)
    "B",   # flake8-bugbear (common bugs)
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # Allow assert in tests
"src/maestro/gui/*" = ["N802"]  # Allow Qt method overrides (paintEvent, closeEvent, etc.)

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradually enforce, don't block on existing code
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true

# Third-party library handling
ignore_missing_imports = true  # Libraries like mido, pynput may lack stubs

# Specific module configurations if needed
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false  # Allow looser typing in tests
